[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/gui/default_theme/MenuButton.gd" type="Script" id=1]
[ext_resource path="res://assets/gui/title_screen/button_focus.ogg" type="AudioStream" id=2]
[ext_resource path="res://assets/gui/title_screen/button_press.ogg" type="AudioStream" id=3]

[node name="MenuButton" type="TextureButton"]
size_flags_horizontal = 4
script = ExtResource( 1 )

[node name="ButtonFocus" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="ButtonPress" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="focus_entered" from="." to="." method="_on_MenuButton_focus_entered"]
[connection signal="pressed" from="." to="." method="_on_MenuButton_pressed"]
